server/tree-sitter-hercscript/corpus/comments/body_block.txt
===================================================
Block comment inside script body
===================================================
prontera,150,150,4	script	Test	1_M_01,{
    /*
    Block Comment
    */
}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block)
	)
)
