server/tree-sitter-hercscript/corpus/comments/cmd_block.txt
===================================================
Block comment in function parameter
===================================================

prontera,150,150,4	script	Test	1_M_01,{
    cmd("str", /* "str2", */10);
}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block
            (function_stmt
                (identifier)
                (parameter_list
                    (string)
                    (number)
                )
            )
        )
	)
)
