server/tree-sitter-hercscript/corpus/comments/header_block.txt
===================================================
Block comment before script header
===================================================
/*
 Block Comment
*/
prontera,150,150,4	script	Test	1_M_01,{

}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block)
	)
)
