server/tree-sitter-hercscript/corpus/comments/header_line.txt
===================================================
Line comment before script header
===================================================
// Line comment
prontera,150,150,4	script	Test	1_M_01,{

}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block)
	)
)
