server/tree-sitter-hercscript/corpus/headers/hidden-name.txt
===================================================
Visible, in map Script-type NPC named only with hidden part
===================================================

prontera, 150, 150, 4	script	#My NPC hide	1_M_01,{

}

---

(source_file
	(script_def
    	(position map: (identifier) x: (number_literal) y: (number_literal) dir: (number_literal))
		(npc_name)
		sprite: (identifier)
    	body: (block)
	)
)
