server/tree-sitter-hercscript/corpus/headers/hidden-unique-name.txt
===================================================
Visible, in map Script-type NPC named with spaces and hidden/unique parts
===================================================

prontera, 150, 150, 4	script	My NPC#isHidden::andunique	1_M_01,{

}

---

(source_file
	(script_def
    	(position map: (identifier) x: (number_literal) y: (number_literal) dir: (number_literal))
    	(npc_name (visible_name) (hidden_name) (unique_name))
    	sprite: (identifier)
    	body: (block)
	)
)
