server/tree-sitter-hercscript/corpus/headers/in-map-npc.txt
===================================================
Visible, in-map, Script-type NPC header
===================================================

map,10,100,1	script	Test	1_NPC,{

}

---

(source_file
	(script_def
		(position map: (identifier) x: (number_literal) y: (number_literal) dir: (number_literal))
		(npc_name (visible_name))
		sprite: (identifier)
		body: (block)
	)
)
