server/tree-sitter-hercscript/corpus/headers/multiple-npc.txt
===================================================
Multiple floating npcs
===================================================

-	script	Test NPC 1#hid	1_M_01,{

}

-	script	Test NPC 2#hid	1_M_01,{

}

-	script	Test NPC 3#hid	1_M_01,{

}

---

(source_file
	(script_def
		(position)
		(npc_name (visible_name) (hidden_name))
		sprite: (identifier)
		body: (block)
	)
	(script_def
		(position)
		(npc_name (visible_name) (hidden_name))
		sprite: (identifier)
		body: (block)
	)
	(script_def
		(position)
		(npc_name (visible_name) (hidden_name))
		sprite: (identifier)
		body: (block)
	)
)
