server/tree-sitter-hercscript/corpus/headers/script_floating.txt
===================================================
Visible, and in a map Script-type NPC header
===================================================

-	script	Test NPC#hid::unq	1_M_01,{

}

---

(source_file
	(script_def
    	(position)
    	(npc_name)
    	(npc_sprite)
    	(block)
	)
)
