server/tree-sitter-hercscript/corpus/headers/script_inmap_hidden_unique_names.txt
===================================================
Visible, in map Script-type NPC named with spaces and hidden/unique parts
===================================================

prontera, 150, 150, 4	script	My NPC#isHidden::andunique	1_M_01,{

}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block)
	)
)
