server/tree-sitter-hercscript/corpus/headers/script_inmap_hiddenname.txt
===================================================
Visible, and in a map Script-type NPC header named with spaces and hidden part
===================================================

prontera, 150, 150, 4	script	My NPC#isHidden	1_M_01,{

}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block)
	)
)
