server/tree-sitter-hercscript/corpus/headers/script_inmap_hiddenonly_name.txt
===================================================
Visible, in map Script-type NPC named only with hidden part
===================================================

prontera, 150, 150, 4	script	#My NPC hide	1_M_01,{

}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block)
	)
)
