server/tree-sitter-hercscript/corpus/headers/script_inmap_spacename.txt
===================================================
Visible, and in a map Script-type NPC header with spaces in name
===================================================

prontera, 150, 150, 4	script	Spaced Name Test	1_M_01,{

}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block)
	)
)
