server/tree-sitter-hercscript/corpus/headers/uniquename.txt
===================================================
Only Unique Name
===================================================

prontera, 150, 150, 4	script	::andunique	1_M_01,{

}

---

(source_file
	(script_def
    	(position map: (identifier) x: (number_literal) y: (number_literal) dir: (number_literal))
    	(npc_name (unique_name))
    	sprite: (identifier)
    	body: (block)
	)
)
