server/tree-sitter-hercscript/corpus/script/cmd_0_param.txt
===================================================
Script NPC with a close command, a command that has no parameters.
===================================================

prontera,150,150,4	script	Test	1_M_01,{
	close();
}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block
			(function_stmt
				(identifier)
				(parameter_list)
			)
		)
	)
)
