server/tree-sitter-hercscript/corpus/script/commands/cmd_2_intparam.txt
===================================================
Script NPC - command with 2 int parameters
===================================================

prontera,150,150,4	script	Test	1_M_01,{
	getitem(501, 10);
}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block
			(function_stmt
				(identifier)
				(parameter_list
					(number)
					(number)
				)
			)
		)
	)
)
